--- a/module-four/contributors.html
+++ b/module-four/contributors.html
@@ -4,13 +4,13 @@
             <h2>Contributors</h2>
             <h3>Education Design team</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Chris Szwed</span> Education Officer, GTAC</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Duncan Goddard</span> Education Officer, GTAC</li>
+                <li><span>Chris Szwed</span> Education Officer, GTAC</li>
+                <li><span>Duncan Goddard</span> Education Officer, GTAC</li>
             </ul>
             <h3>Consultants</h3>
             <ul class="contributors">
                 
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
+                <li><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
             </ul>
         </section>
     </div>
