--- a/module-one/contributors.html
+++ b/module-one/contributors.html
@@ -4,14 +4,14 @@
             <h2>Contributors</h2>
             <h3>Education Design team</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Duncan Goddard</span> Education Officer, GTAC</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Callum Walker</span> Student, MTeach Secondary, The University of Melbourne</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Silvia Wan</span> Student, MTeach Secondary, The University of Melbourne</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Jacinta Duncan</span> Director, GTAC</li>
+                <li><span>Duncan Goddard</span> Education Officer, GTAC</li>
+                <li><span>Callum Walker</span> Student, MTeach Secondary, The University of Melbourne</li>
+                <li><span>Silvia Wan</span> Student, MTeach Secondary, The University of Melbourne</li>
+                <li><span>Jacinta Duncan</span> Director, GTAC</li>
             </ul>
             <h3>Consultants</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
+                <li><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
             </ul>
         </section>
     </div>
