--- a/module-three/contributors.html
+++ b/module-three/contributors.html
@@ -4,17 +4,17 @@
             <h2>Contributors</h2>
             <h3>Education Design team</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Associate Professor Peter Hubber</span> Deakin University</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Chris Szwed</span> Education Officer, GTAC</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Meg Gleeson</span> Student, Deakin University</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Uyen (Lavie) Vo</span> Student, MTeach Secondary, The University of Melbourne</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Xavier Saunder</span> Student, Deakin University</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Duncan Goddard</span> Education Officer, GTAC</li>
+                <li><span>Associate Professor Peter Hubber</span> Deakin University</li>
+                <li><span>Chris Szwed</span> Education Officer, GTAC</li>
+                <li><span>Meg Gleeson</span> Student, Deakin University</li>
+                <li><span>Uyen (Lavie) Vo</span> Student, MTeach Secondary, The University of Melbourne</li>
+                <li><span>Xavier Saunder</span> Student, Deakin University</li>
+                <li><span>Duncan Goddard</span> Education Officer, GTAC</li>
             </ul>
             <h3>Consultants</h3>
             <ul class="contributors">
                 
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
+                <li><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
             </ul>
         </section>
     </div>
