--- a/module-two/contributors.html
+++ b/module-two/contributors.html
@@ -4,15 +4,15 @@
             <h2>Contributors</h2>
             <h3>Education Design team</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Chris Szwed</span> Education Officer, GTAC</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Duncan Goddard</span> Education Officer, GTAC</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Jiyeon Lee</span> Student, MTeach Secondary, The University of Melbourne</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Uyen (Lavie) Vo</span> Student, MTeach Secondary, The University of Melbourne</li>
+                <li><span>Chris Szwed</span> Education Officer, GTAC</li>
+                <li><span>Duncan Goddard</span> Education Officer, GTAC</li>
+                <li><span>Jiyeon Lee</span> Student, MTeach Secondary, The University of Melbourne</li>
+                <li><span>Uyen (Lavie) Vo</span> Student, MTeach Secondary, The University of Melbourne</li>
             </ul>
             <h3>Consultants</h3>
             <ul class="contributors">
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Associate Professor Peter Hubber</span> Deakin University</li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
+                <li><span>Associate Professor Peter Hubber</span> Deakin University</li>
+                <li><span>Dr James Fallon</span> Bionics Institute, Senior Research Fellow</li>
             </ul>
         </section>
     </div>
