--- a/summative/contributors.html
+++ b/summative/contributors.html
@@ -4,8 +4,8 @@
             <h2>Contributors</h2>
             <ul class="contributors">
                 
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>KJ Tan</span></li>
-                <li><img src="{{ site.baseurl }}//img/avatar.jpg" alt=""><span>Duncan Goddard</span> Education Officer, GTAC</li>
+                <li><span>KJ Tan</span></li>
+                <li><span>Duncan Goddard</span> Education Officer, GTAC</li>
             </ul>
         </section>
     </div>
