--- a/summative/index.html
+++ b/summative/index.html
@@ -15,7 +15,7 @@ title: Summative task
         <section class="one-third well">
             <h3>Australian Curriculum links</h3>
             <h4>Science / Level 9 / Science Inquiry Skills / Communicating</h4>
-            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>)</p>
+            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>)</p>
         </section>
         <section class="two-thirds well">
             <h3>Instructions</h3>
