--- a/module-four/curriculum-links/index.html
+++ b/module-four/curriculum-links/index.html
@@ -11,14 +11,14 @@ title: Bionic eye module 4
     <div class="outer-container">
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Questioning and predicting</h3>
-            <p>Formulate questions or hypotheses that can be investigated scientifically (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS164">ACSIS164</a>).</p>
+            <p>Formulate questions or hypotheses that can be investigated scientifically (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS164">ACSIS164</a>).</p>
             <ul>
                 <li>revising and refining research questions to find solutions to the specific problems identified</li>
             </ul>
         </section>
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Planning and conducting</h3>
-            <p>Select and use appropriate equipment, including digital technologies, to systemically and accurately collect and record data (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS166">ACSIS166</a>).</p>
+            <p>Select and use appropriate equipment, including digital technologies, to systemically and accurately collect and record data (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS166">ACSIS166</a>).</p>
             <ul>
                 <li>Students investigate the value of their predicted solutions through targeted investigations.</li>
             </ul>
