--- a/module-one/curriculum-links/index.html
+++ b/module-one/curriculum-links/index.html
@@ -11,7 +11,7 @@ title: Bionic eye module 1
     <div class="outer-container">
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Processing and analysing data and information</h3>
-            <p>Analyse patterns and trends in data, including describing relationships between variables and identifying inconsistencies (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS169">ACSIS169</a>)</p>
+            <p>Analyse patterns and trends in data, including describing relationships between variables and identifying inconsistencies (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS169">ACSIS169</a>)</p>
             <ul>
                 <li>presenting data in tables and processing them into graphical forms</li>
                 <li>analysing graphs to generate conclusions from data</li>
@@ -19,18 +19,18 @@ title: Bionic eye module 1
         </section>
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Communicating</h3>
-            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>)</p>
+            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>)</p>
             <ul>
                 <li>presenting results and ideas to group discussions</li>
             </ul>
         </section>
         <section class="one-third well">
             <h3>Mathematics / Level 9 / Statistics and Probability / Data representation and interpretation</h3>
-            <p>Identify everyday questions and issues involving at least one numerical and at least one categorical variable, and collect data directly and from secondary sources (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACMSP228">ACMSP228</a>)</p>
+            <p>Identify everyday questions and issues involving at least one numerical and at least one categorical variable, and collect data directly and from secondary sources (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACMSP228">ACMSP228</a>)</p>
             <ul>
                 <li>collecting data with and without visual impairment goggles</li>
             </ul>
-            <p>Compare data displays using mean, median and range to describe and interpret numerical data sets in terms of location (centre) and spread (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACMSP283">ACMSP283</a>)</p>
+            <p>Compare data displays using mean, median and range to describe and interpret numerical data sets in terms of location (centre) and spread (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACMSP283">ACMSP283</a>)</p>
             <ul>
                 <li>presenting results using box and whisker plots</li>
             </ul>
