--- a/module-three/curriculum-links/index.html
+++ b/module-three/curriculum-links/index.html
@@ -11,15 +11,15 @@ title: Bionic eye module 3
     <div class="outer-container">
         <section class="one-third well">
             <h3>Science / Level 9 / Science Understanding / Biological Sciences</h3>
-            <p>Multi-cellular organisms rely on coordinated and interdependent internal systems to respond to changes in their environment (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSSU175">ACSSU175</a>).</p>
+            <p>Multi-cellular organisms rely on coordinated and interdependent internal systems to respond to changes in their environment (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSSU175">ACSSU175</a>).</p>
         </section>
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Processing and analysing data and information</h3>
-            <p>Analyse patterns and trends in data, including describing relationships between variables and identifying inconsistencies (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS169">ACSIS169</a>). Use knowledge of scientific concepts to draw conclusions that are consistent with evidence (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS170">ACSIS170</a>).</p>
+            <p>Analyse patterns and trends in data, including describing relationships between variables and identifying inconsistencies (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS169">ACSIS169</a>). Use knowledge of scientific concepts to draw conclusions that are consistent with evidence (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS170">ACSIS170</a>).</p>
         </section>
         <section class="one-third well">
             <h3>Science / Level 9 / Science Inquiry Skills / Communicating </h3>
-            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>).</p>
+            <p>Communicate scientific ideas and information for a particular purpose, including constructing evidence-based arguments and using appropriate scientific language, conventions and representations (<a href="http://pandora.nla.gov.au/pan/129125/20121206-0015/ausvels.vcaa.vic.edu.au/Curriculum/ContentDescription/ACSIS174">ACSIS174</a>).</p>
         </section>
     </div>
 </div>
